fixed header so the image border is not visible, cleaning up dashboard css

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,12 +16,16 @@ h2 {
 
 }
 
+.navigation {
+	background-color: #fff;
+}
+
 .doctors-table {
 	background-color: #e6e6e6;
 }
 
 .navbar-right {
-	padding-top: 7px;
+	/*padding-top: 5px;*/
 }
 
 .steve {
@@ -120,7 +124,8 @@ h2 {
 	padding: 5px;
 }
 
-.add-patient .button {
+.patient-button {
 	padding: 10px;
-	vertical-align: center;
+	margin: 10px;
 }
+
